# airfoil_profile_optimization

./: .gitignore  CLAUDE.md  LICENSE  README.cn.md  README.md  pyproject.toml  start.sh
sims/sim_ref/: Allclean  Allrun  Allrun-parallel
sims/sim_ref/0.orig/: U  nuTilda  nut  p
sims/sim_ref/constant/: keyParameters  transportProperties  turbulenceProperties
sims/sim_ref/system/: changeDictionaryDict  controlDict  decomposeParDict  fvSchemes  fvSolution
src/: backend.py  config.py  config_example.json  extract_trial.py  frontend.py  progresstracker.py  show_profile.py  tool_cader.py  tool_mesher.py  tool_postprocessor.py  tool_simulator.py  utils.py  visualizer.py
